configure for ingress

--- a/tasmoadmin/rootfs/etc/nginx/nginx.conf
+++ b/tasmoadmin/rootfs/etc/nginx/nginx.conf
@@ -1,53 +1,59 @@
-worker_processes  1;
-pid /var/run/nginx.pid;
-user nginx nginx;
+# Run nginx in foreground.
+daemon off;
 
+# This is run inside Docker.
+user root;
+
+# Pid storage location.
+pid /var/run/nginx.pid;
+
+# Set number of worker processes.
+worker_processes 1;
+
+# Enables the use of JIT for regular expressions to speed-up their processing.
+pcre_jit on;
+
+# Write error log to Hass.io add-on log.
+error_log /proc/1/fd/1 error;
+
+# Load allowed environment vars
+env HASSIO_TOKEN;
+env DISABLE_HA_AUTHENTICATION;
+
+# Load dynamic modules.
+include /etc/nginx/modules/*.conf;
+
+# Max num of simultaneous connections by a worker process.
 events {
-    worker_connections  1024;
+    worker_connections 512;
 }
 
 http {
-    include            mime.types;
-    default_type       application/octet-stream;
-    sendfile           on;
-    keepalive_timeout  65;
+    include /etc/nginx/includes/mime.types;
 
-    server {
-        server_name hassio.local;
-        listen 9541 default_server;
-        root /var/www/tasmoadmin/tasmoadmin/;
-        index index.php;
+    log_format hassio '[$time_local] $status '
+                        '$http_x_forwarded_for($remote_addr) '
+                        '$request ($http_user_agent)';
 
-        location /data/firmwares {
-        }
+    access_log              /proc/1/fd/1 hassio;
+    client_max_body_size    4G;
+    default_type            application/octet-stream;
+    gzip                    on;
+    keepalive_timeout       65;
+    lua_load_resty_core     off;
+    lua_shared_dict         auths 16k;
+    sendfile                on;
+    server_tokens           off;
+    tcp_nodelay             on;
+    tcp_nopush              on;
 
-        location /data/ {
-            deny all;
-        }
-
-        location ~ .php$ {
-            fastcgi_pass 127.0.0.1:9001;
-            fastcgi_read_timeout 900;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
-        }
-
-        location ~ ^(.*)\.(css|js|gif||jpe?g|png|json|cache\.json)$ {
-        }
-
-        location / {
-            rewrite ^/login$ /login.php last;
-            rewrite ^/logout$ /login.php?logout=logout last;
-            rewrite ^/doAjaxAll$ /index.php?doAjaxAll=doAjaxAll last;
-            rewrite ^/doAjax$ /index.php?doAjax=doAjax last;
-            rewrite "/([a-z]{2})/" /index.php?lang=$1 last;
-            rewrite ^/([a-zA-Z_]+)/([a-zA-Z_]+)/([0-9_]+)/?$ /index.php?page=$1&action=$2&device_id=$3;
-            rewrite ^/([a-zA-Z_]+)/(force)/?$ /index.php?page=$1&force=1;
-            rewrite ^/([a-zA-Z_]+)/([a-zA-Z_]+)/?$ /index.php?page=$1&action=$2;
-            rewrite ^/([a-zA-Z_]+)/([0-9]+)/?$ /index.php?page=$1&device_id=$2;
-            rewrite ^/([a-zA-Z_]+)/?$ /index.php?page=$1;
-        }
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
     }
+
+    include /etc/nginx/includes/resolver.conf;
+    include /etc/nginx/includes/upstream.conf;
+
+    include /etc/nginx/servers/*.conf;
 }
