--- a/tasmoadmin/config.json
+++ b/tasmoadmin/config.json
@@ -9,19 +9,23 @@
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
   "boot": "auto",
   "hassio_api": true,
-  "hassio_role": "default",
+  "hassio_role": "manager",
+  "auth_api": true,
+  "ingress": true,
+  "ingress_port": 8099,
   "map": ["ssl"],
   "ports": {
-    "9541/tcp": 9541
+    "80/tcp": 9541
   },
   "ports_description": {
-    "9541/tcp": "TasmoAdmin web interface"
+    "80/tcp": "TasmoAdmin web interface (Required for OTA Firmware Updates)"
   },
   "options": {
-    "ssl": true,
+    "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem"
   },
+  "panel_icon": "mdi:home-automation",
   "schema": {
     "log_level": "list(trace|debug|info|notice|warning|error|fatal)?",
     "ssl": "bool",
